<resources>
    <string name="app_name">firetest</string>

    <string name="signin">로그인</string>
    <string name="success_login">로그인 성공</string>
    <string name="failed_login">로그인 실패</string>
    <string name="bangkok">태국의 수도이자 최대 도시인 방콕은 세계적으로도 가장 유명한 관광 명소 중 하나이다. 방콕은 태국 여행의 관문으로서 태국에 오는 관광객의 대다수가 우선 방콕에 도착한다. 아울러 방콕 도심에는 대규모 쇼핑몰과 잘 발달된 전철, 도로망이 갖춰져있어 관광객들의 편의성과 접근성을 높여준다. 방콕의 주요 교통수단으로는 가격이 다른나라에 비해 비교적 저렴한 택시와 BTS, MRT라 칭하는 지하철이 있다. 방콕은 세계적으로 가장 큰 공항중 하나인 수완나품 공항에서 방문 가능하다.</string>
    <string name="pattaya">태국의 수완나품 공항으로 부터 100km정도 떨어져 있으며 적당한 가격에 해변을 즐길 수 있어 인기있는 휴양지이다. 파타야 해변 근처에 산호섬으로 들어가면 스노쿨링, 페러글라이딩 등의 다양한 체험을 할 수 있다.</string>
    <string name="chinagmai">방콕으로부터 700km 정도 북부에 위치한 치앙마이는 국제공항을 통해 접근 가능하며 택시 뿐만 아니라 타기 전에 가격 흥정을 하고 타는 오토바이와 비슷한 툭툭이라는 3륜 택시와 1톤 트럭을 개조한 "썽태우'라는 교통수단을 이용해 여행을 다닐 수 있다.</string>
    <string name="kaosan">카오산로드는 전 세계 여행객들의 메카로 400m 반경 내에 길거리 노점상, 환전소, 게스트 하우스, 여행사 등이 밀집하고 있다. 어쩌면 현지인들보다도 외국인이 더 많을 정도로 핫한 곳이며, 태국의 밤문화가 흥행하는(클럽, 술집) 몇 안되는 곳이기도 하다.</string>
    <string name="katto">태국 최대의 재래 시장인 짜뚜짝 시장에는 식품, 의류, 생활 용품 등 각 종류별로 없는게 없는 곳이다. 상점이 약 15000여개가 따닥 붙어 재래 시장을 이루었으며, 물품의 가격 역시 굉장히 저렴한 편으로 많은 외국인들이 기념품을 사러 방문하는 곳 중 하나이다.</string>
    <string name="wang">역대 국왕들이 살던 궁전인 방콕의 왕궁으로 약 71만평의 달하는 규모로 현재 많은 외국인들이 구경을 하기 위해 왕궁으로 방문한다.</string>
    <string name="night">방콕의 아침을 밝히는 새벽사원으로도 유명한 왓 아룬은 태국 10바트 짜리에 새겨져 있는 탑으로 태국 석탑 기술의 완성도를 보여주며 경사가 있기는 하지만 기념 사진 촬영이 허락되어 관광객들에게 인기가 많은 사원이다. 새벽 뿐만 아니라 밤에 와도 화려한 조명이 관광객들의 이목을 집중하게 만든다."</string>
    <string name="siam">관광객들이 태국 백화점하면 떠오르는 곳이 바로 씨암 파라곤일 정도로 개성 넘치는 아이템들이 가득하다. 지하의 고메 마켓을 가면 방콕을 대표하는 기념품들을 모두 구매할 수 있고, 유명 맛집과 대형아쿠아리움이 관광객들을 맛이하고 있다.</string>
    <string name="terminal21">공항 터미널 콘셉트를 가진 터미널 21은 관광객 뿐만 아니라 태국의 젊은이들 사이에서도 인기가 많은 쇼핑몰이다. 마치 유럽에서 쇼핑을 하고 있는 느낌을 줄 정도로 공항을 테마로 삼아 다양한 콘셉트로 구성되어 있으며 이 안에도 다양한 맛집과 매장들이 존재한다.</string>
    <string name="hanoi1">베트남에서 볼수 있는 신고딕 양식의 가톨릭 성당으로 파리의 노트르담 대성당을 모델로 하여 프랑스에 온 것 같은 기분을 만끽할 수 있는 장소이다. 낮에는 웅장한 외관을 자랑하며, 밤에는 아름다운 야경을 볼 수 있다.</string>
    <string name="hanoi2">호수 중심의 역사적 명소들과 카페들이 여럿 있는 이곳은 오랜 역사를 담고 있는 관광 명소로, 밤에 호수에 비치는 야경을 토대로 기념사진 촬영하기에 적합한 장소이며, 축제 기간에 방문시 불꽃놀이도 감상할 수 있다. </string>
    <string name="hanoi3">약 200m의 거리인 타히엔 맥주 거리에서는 다양한 음식점과 맥주집이 들어서 있으며, 밤에 오면 문화들을 즐기기 위한 사람들로 북적인다.</string>
    <string name="hanoi4">하노이 주민들의 생활 상을 엿볼 수 있는 이 거리는 기차가 실제로 다니는 기차길이 존재하며 기차길 근처에 존재하는 건물들의 디자인이 아름다워 기념촬영을 하면 좋은 명소이기도 하다.</string>
    <string name="hanoi5">많은 사람들이 아름답게 펼쳐진 베트남의 자연경관을 감상하기 위해 이곳을 찾는다. 크루즈 투어 같은 프로그램으로 "송솔 동굴", "티톱 성" 등의 명소들을 방문할 수 있다.</string>
    <string name="danang1">다낭의 대표적인 랜드마크 다리로 밤이 되면 다리의 조명이 수시로 바뀌는 아름답고 환상적인 야경 명소로 변신한다. 주말에는 사람들이 이 용 모양의 다리를 보기 위해 북적인다.</string>
    <string name="danang2">다낭의 대표적인 재래시장으로 저렴한 가격으로 음식 재료들과 기념품들을 구매할 수 있다. 시장 골목에는 맛집으로 유명한 "반미 AA 해피 브래드"도 자리하고 있다. 이 곳의 유명 기념품으로는 베트남의 전통 의복이다.</string>
    <string name="danang3">프랑스의 식민 지배 당시 생겼던 휴양시설로 현재는 테마 파크로 재오픈 하였으며 당시의 프랑스 건축 양식을 이곳에서도 볼 수 있다. 바나 힐로 올라가기 위해 케이블카를 이용해야 한다.</string>
    <string name="danang4">다낭의 세계적인 해변으로 재밌는 해양 스포츠들을 즐기고 넓은 해변에 펼쳐지는 고기잡이 풍경도 감상 할 수 있다. 아침에는 해변에서 일출도 볼 수 있어 사람들이 많이 방문한다.</string>
    <string name="danang5">프랑스 식민지 시절에 세워진 프랑스의 천주교 성당으로 내부에 들어가 핑크색 성당의 배경으로 기념촬영을 할 수 있다. 지붕에 수탉모양의 풍향계 때문에 현지인들에게 수탉 성당이라 불리기도 한다.</string>
    <string name="hoian1">과거 해상무역의 중심지였던 호이안의 모습을 볼 수 있는 이곳은 중국인 상인들이 살던 여러 채의 고택을 볼 수 있다. 밤에는 거리의 등불들이 이국적인 풍경을 보게 해주며 여러 축제, 야시장들을 즐길 수 있다.</string>
    <string name="hoian2">호이안의 대표적인 야시장으로 다양한 길거리 음식과 수공예품 쇼핑을 즐길 수 있다. 대표적인 음식으로 샌드위치 "반미"가 인기가 좋다. 야시장은 밤에 옆에 있는 투분 강의 야경도 볼 수 있다.</string>
    <string name="hoian3">호이안의 대표적인 해변으로 아름 다운 해변의 풍경을 즐기고 해양 스포츠도 즐길 수 있다. 씨푸트나 칵테일을 즐길 수 있는 바도 여러 군데 존재하며 다양한 맛집에서 오션 뷰를 즐길 수 있다.</string>
    <string name="hoian4">호이안에서 매월 14일에 열리는 대표적인 축제 현장으로 수천 개의 등불들을 볼 수 있다. 화려한 야경과 낭만적인 분위기를 밤에 즐길 수 있어서 많은 관광객들이 주로 밤에 오는 편이다.</string>
    <string name="hanoi">베트남의 수도. 프랑스식 건축물과 베트남의 역사를 느낄 수 있다. 바딘 광장, 호치민 생가, 호안끼엡 호수, 성요셉성당, 한기둥 사원 등이 주요 명소이다. 베트남 국보 1호로 지정된 못꼿사원도 관광객이 찾는 유명한 명소이다. 호치민 묘는 월요일과 금요일은 개방하지 않으므로 이곳을 방문하고 싶다면 일정을 주의해야 한다. 베트남 전통인형극인 수상인형극을 보는 것도 추천한다. 아열대 기후로 연중 따뜻하지만 겨울에는 쌀쌀한 편으로 11월에서 12월 사이에 여행하기 좋다.</string>
    <string name="danang">다낭은 베트남 남중부 지역의 최대 상업 및 항구도시이자 베트남의 다섯 개의 직할시 중 하나이고, 베트남에서 호찌민 시, 하노이, 하이퐁 다음으로 네 번째 큰 도시이다.</string>
    <string name="hoian">다낭에서 남쪽으로 약 30km 떨어진 부글라강(江) 어귀의 남중국해 연안에 위치한다. 옛날에는 파이포라고 하였다. 온화한 날씨는 5월과 6월부터 8월말까지이다.연중 나머지(9월~4월) 날씨는 비와 추위, 그리고 덥고 온화한 날씨가 되풀이 된다. 짬 섬(Cù lao Chàm) 방문과 같은 인기 있는 근해 활동은 5월 말부터 8월 말까지 짧은 기간에만 가능하다. 이때가 내국인 관광 성수기이기도 하다.</string>
    <string name="chiang1">치앙마이의 대표적 재래시장으로 현지 과자나 건과일 같은 기념품들을 저렴한 가격에 살 수 있고, 다양한 음식점과 생품 판매점이 존재해 관광객 뿐만 아니라 현지인들도 자주 방문하는 장소이다.</string>
    <string name="chiang2">치앙마이의 대표적인 불교 사원으로 왕국 수도의 사원이기도한 역사적인 장소이다. 황금빛으로 가득한 이 사원은 대리석 불상인 "프라 실라"와 크리스탈 불상 "프라 새 땅 따마니"가 대표적인 사원이기도 하다.</string>
    <string name="chiang3">치앙마이에서 쇼핑을 하고 싶다면 관광객들은 마야몰을 찾을 정도로 다양한 브랜드 매장들과 음식점이 몰려있다. 1층 잡화 코너에서는 태국산 수공예품을 볼 수 있고, 6층에서는 시내 야경을 감상할 수 있다.</string>
    <string name="chiang4">태국의 수공예품, 잡화들을 이 야시장에서 만날 수 있다. 거리 예술가들의 공연도 볼 수 있으며, 판매하는 물건의 종류가 정말 다양해 밤에 할 것이 없다면 방문을 추천한다.</string>
    <string name="chiang5">백색 사원은 말 그대로 모든 건물들이 부처의 순수함을 상징하는 순백색으로 지어져 보는 사람들의 마음을 황홀하게 하는 사원이다. 종교적인 의미를 담은 예술 품들을 구경하고 가면 정말 좋을 것 같다.</string>
    <string name="sevilla">세비야(스페인어: Sevilla, 영어: Seville)는 스페인의 남서부에 있는 도시로, 안달루시아 지방의 예술, 문화, 금융의 중심 도시이며 세비야 주의 주도이다. 과달키비르 강이 흐르는 평야지대에 자리잡고 있다. 평균 고도는 해발 7 m이다. 스페인에서 4번째로 큰 도시로 마드리드, 바르셀로나, 발렌시아 다음이다. </string>
    <string name="barcelona">바르셀로나는 스페인에서 두 번째로 큰 도시로, 스페인 동부 지중해 연안 지역부터 프랑스 남쪽 피레네 산맥과 접경지역을 아우르는 카탈루냐 지방의 중심 도시이다. 화가 파블로 피카소, 호안 미로와 건축가 안토니오 가우디 등 많은 예술가를 배출한 도시로 유명하다.</string>
    <string name="madrid">마드리드(스페인어: Madrid)는 스페인의 수도로, 나라의 중앙부에 있다.  마드리드가 쏟아내는 경제적 효과로 인해 주변 도시들이 크게 영향을 받으며 따라서 마드리드는 이베리아 반도의 경제 중심으로 여겨진다. 스페인의 수도로서 정부 청사가 있으며 스페인 왕궁이 있을 뿐 아니라 스페인 정계의 중심이기도 하다.</string>
    <string name="p1">파타야 해변으로 부터 20분간 배를 타고 들어가면 나오는 신비의 섬 산호섬은 각종 해양 액티비티를 비롯해 해수욕도 즐길 수 있는 해변들도 많이 존재한다. 곳곳에서 산호초를 쉽게 볼수도 있다.</string>
    <string name="p2">물 위를 떠다니면서 시장을 둘러 볼 수 있으며, 전통시장을 온 것 같은 기분을 받게 되는 수상 시장은 다양한 기념품들을 저렴한 가격에 구매할 수 있는 히든 플레이스라 할 수 있다. 규모는 무려 3만평에 다랄 정도로 엄청나게 큰 시장이다.</string>
    <string name="p3">태국의 아름다운 대규모의 공원으로 관광객들은 이 곳에 와서 기념촬영을 많이 남기는 편이다. 또한 내부 시설에서는 코끼리 쇼를 감상 할 수 있어 많이 방문한다.</string>
    <string name="p4">파타야의 밤 문화를 체험할 수 있는 대표 장소로 많은 관광객들이 밤에 찾는 거리이다. 펍, 레스토랑, 클럽 등 다양한 서비스 상점들이 존재하며 뉴욕을 온 것 처럼 분위기를 풍기기도 한다.</string>
    <string name="s1"> 스페인 광장은 스페인 세비야에 있는 광장이다. 스페인 전 도시의 이름이 새겨져있는 벽돌이 인상적인 광장이며 스페인과 같이 웅장하며 거대하다.  </string>
    <string name="s2">세비야 대성당은 스페인의 세비야에 위치해 있는 가장 큰 대성당으로, 크리스토퍼 콜롬버스의 관이 있다. 12세기에 지어진 이슬람 사원을 부수고 지은 것이며 1402년부터 100여 년 동안에 걸쳐 만들어졌기 때문에 이슬람 건축과 고딕, 르네상스 양식이 조화를 이루고 있다.</string>
    <string name="s3">영어에서 번역됨-히랄다는 스페인 세비야에있는 세비야 대성당의 종탑입니다. 알무 하드 왕조 기간 동안 스페인 무어주의 알-안달 루스에있는 세비야 대 모스크의 미나렛으로 지어졌으며이 지역에서 무슬림을 추방 한 후 가톨릭 신자들이 르네상스 스타일의 탑을 추가했습니다.</string>
    <string name="s4">황금의 탑은 스페인 세비야에 있는 탑이다. 스페인어로 "Torre del oro"로 황금이 탑이라는 이름을 가졌다. </string>
    <string name="b1"> 사그라다 파밀리아 성당은 스페인 바르셀로나에 짓고 있는 로마 가톨릭 성당이다. 사그라다 는 스페인어로 신성한 또는 성스러운이라는 뜻을 가졌으며, 파밀리아는 가족을 뜻하기 때문에 성가족성당이라고도 불린다. 카탈루냐 출신의 건축가 안토니 가우디가 설계하고 직접 건축을 책임졌다.</string>
    <string name="b2"> 구엘 공원은 스페인 바르셀로나에 있는 공원이다. 1984년 유네스코 세계유산에 등록되었다. 안토니 가우디의 작품 중 하나이다. 카르멜 언덕 위에 있으며, 공용 공원과 초등학교가 위치해 있다. 에우제비 구에이를 기리기 위해 1914년/완성되었다 </string>
    <string name="b3">카사밀라는 익히 라 페드레라로도 불리고 있으며, 안토니오 가우디의 작품으로 바르셀로나 중심가인 파세오 데 그라시아 거리에 위치해 있다. 이며 1906년 설계를 시작해 1912년에 완공된 고급 연립주택이다. 1984년 유네스코 세계 문화 유산으로 지정되었다.  </string>
    <string name="b4"> 카사 바트요는 스페인 바르셀로나에 있는 안토니 가우디가 설계한 건축물 중 하나로, 2005년 유네스코 세계 문화 유산에 등록되었다. 이는 앞서 해당 부지에 있었던 Emilio Sala Cortés의 건물을 리모델링한 것이다.</string>
    <string name="m1">마요르 광장은 스페인 마드리드에 있는 광장이다. 푸에르타 델 솔 및 빌라 광장에서 몇 블록 떨어진 거리에 있다. 129m × 94m의 직사각형 모양을 하고 있으며 광장에 접해있는 237개의 발코니를 가진 3층 건물에 둘러싸여있다 </string>
    <string name="m2">마드리드 왕궁은 스페인의 왕실 공식 관저이다. 사실 마드리드 외곽의 작은 궁전인 사르수엘라 궁에 머물고 있다. 국가적 상황에만 사용이 되는 것이 원칙이다. 뿐만 아니라 서부 유럽을 통틀어서는 2,800여 개 이상의 방과 135,000 m²의 크기로 단연 최대의 크기를 자랑한다. </string>
    <string name="m3"> 레티로 공원은 스페인 마드리드에 위치한 공원이다. 낮에도 아름답지만 조명이 켜지는 밤에는 더 화려하고 낭만스럽다. </string>
    <string name="m4"> 프라도 미술관은 스페인 마드리드에 있는 세계적인 미술관 중 하나이다. 15세기 이후 스페인 왕실에서 수집한 미술 작품을 전시하고 있다.</string>
</resources>