<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:orientation="vertical"
            android:background="@drawable/sevilla"
            >
            <TextView
                android:id="@+id/thaiTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:textColor="#fff"
                android:textStyle="bold"
                android:gravity="right"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="30dp"
                android:text="스페인"
                android:textColor="#fff"
                android:textSize="80dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="30dp"
                android:text="Spain"
                android:textColor="#fff"
                android:textSize="20dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/text"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="30dp"
                    android:text="세비야"
                    android:textColor="#fff"
                    android:textSize="25dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/text2"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="30dp"
                    android:text="바르셀로나"
                    android:textColor="#fff"
                    android:textSize="25dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/text3"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="30dp"
                    android:text="마드리드"
                    android:textColor="#fff"
                    android:textSize="25dp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical">
            <VideoView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/vv"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="환율 계산하기"
                android:fontFamily="@font/forest"
                android:layout_margin="20dp"
                android:textSize="30dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="10dp"
                android:background="#ddd"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="10dp">
                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="EUR"
                        android:textSize="30dp"
                        android:layout_margin="10dp"
                        android:layout_gravity="left"/>
                    <TextView
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:textSize="30dp"
                        android:id="@+id/safter"
                        android:layout_marginRight="20dp"/>
                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="유로"
                        android:textAlignment="textEnd"
                        android:textSize="30dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:text="KRW"
                        android:textSize="30dp" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:gravity="right"
                        android:layout_weight="3"
                        android:inputType="number"
                        android:id="@+id/sedit"
                        android:textSize="20dp" />
                    <TextView
                        android:layout_width="10dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="원"
                        android:textAlignment="textEnd"
                        android:layout_marginRight="15dp"
                        android:textSize="30dp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textColor="#ff33"
                android:textStyle="bold"
                android:gravity="center"
                android:text="스페인의 주요 도시 살펴보기"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textSize="30dp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="세비야 sevilla"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/sevilla2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="15dp"
                android:textStyle="bold"
                android:text="@string/sevilla"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="세비야 바로 가기"
                android:id="@+id/b1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textSize="30dp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="바르셀로나 Barcelona"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/pat"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="15dp"
                android:textStyle="bold"
                android:text="@string/barcelona"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="바르셀로나 바로 가기"
                android:id="@+id/b2"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textSize="30dp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="마드리드 Madrid"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/madrid"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="15dp"
                android:textStyle="bold"
                android:text="@string/madrid"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="마드리드 바로 가기"
                android:id="@+id/b3"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>