<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:orientation="vertical"
            android:background="@drawable/bet1"
            >
            <TextView
                android:id="@+id/thaiTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:textColor="#fff"
                android:textStyle="bold"
                android:gravity="right"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="30dp"
                android:text="베트남"
                android:textColor="#fff"
                android:textSize="80dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="30dp"
                android:text="Vietnam"
                android:textColor="#fff"
                android:textSize="20dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/text"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="30dp"
                    android:text="하노이"
                    android:textColor="#fff"
                    android:textSize="30dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/text2"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="30dp"
                    android:text="다낭"
                    android:textColor="#fff"
                    android:textSize="30dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/text3"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="30dp"
                    android:text="호이안"
                    android:textColor="#fff"
                    android:textSize="30dp"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical">
            <VideoView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/vv"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="환율 계산하기"
                android:fontFamily="@font/forest"
                android:layout_margin="20dp"
                android:textSize="30dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="10dp"
                android:background="#ddd"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="10dp">
                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="VND"
                        android:textSize="30dp"
                        android:layout_margin="10dp"
                        android:layout_gravity="left"/>
                    <TextView
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:textSize="30dp"
                        android:id="@+id/vafter"
                        android:layout_marginRight="20dp"/>
                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="동"
                        android:textAlignment="textEnd"
                        android:textSize="30dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:text="KRW"
                        android:textSize="30dp" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:gravity="right"
                        android:layout_weight="3"
                        android:inputType="number"
                        android:id="@+id/vedit"
                        android:textSize="20dp" />
                    <TextView
                        android:layout_width="10dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="원"
                        android:layout_marginRight="15dp"
                        android:textAlignment="textEnd"
                        android:textSize="30dp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textColor="#ff33"
                android:textStyle="bold"
                android:gravity="center"
                android:text="베트남의 주요 도시 살펴보기"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textSize="30dp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="하노이 Hanoi"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/bet2"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="15dp"
                android:textStyle="bold"
                android:text="@string/hanoi"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/bet3"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="하노이 바로 가기"
                android:id="@+id/b1"

                android:background="@drawable/buttonshape"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:textSize="20dp"
                android:textColor="#fff"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textSize="30dp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="다낭 danang"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/bet4"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="15dp"
                android:textStyle="bold"
                android:text="@string/danang"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="다낭 바로 가기"
                android:id="@+id/b2"

                android:background="@drawable/buttonshape"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:textSize="20dp"
                android:textColor="#fff"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textSize="30dp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="호이안 Hoian"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/bet5"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="15dp"
                android:textStyle="bold"
                android:text="@string/hoian"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="호이안 바로 가기"
                android:id="@+id/b3"

                android:background="@drawable/buttonshape"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:textSize="20dp"
                android:textColor="#fff"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>